# breast-cancer-detection

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pylintrc  Dockerfile  Dockerfile.prod  LICENSE  Makefile  README.md  __init__.py  create_model_links.sh  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.dvc/: config
.github/workflows/: ci.yml
.streamlit/: config.toml
data/: raw.dvc
models/: best_cnn.keras  best_efficientnet_b3.keras  best_mobilenet_v3.keras  best_model_cnn_7db881027bd149ef9b1809cbc75e671c.keras  best_model_efficientnet_b3_63d01450ba624c5b9d5e63dd657b5c2c.keras  best_model_mobilenet_v3_7ffd75e434ac4ea99a9d8a133ec02855.keras  best_model_resnet50_bb9c3aa4e56a4dc4927fac2d1207af81.keras  best_model_unet_e1db4ba174ce43dda517aed0385accfd.keras  best_resnet50.keras  best_unet.keras
scripts/: deploy.sh  run_services.sh
src/: config.py
src/api/: main.py
src/etl/: download_dataset.py  index_images_and_labels.py  preprocess_images_split.py
src/evaluation/: metrics.py  visualization.py
src/interpretability/: gradcam.py  shap_utils.py
src/models/: base_model.py  inspect_data.py  training.py
src/streamlit/: __init__.py  app.py  config.py
src/streamlit/components/: __init__.py  header.py  sidebar.py
src/streamlit/custom_pages/: __init__.py  history.py  metrics.py  mlflow_history.py  monitoring.py  prediction.py
src/streamlit/services/: __init__.py  prediction_service.py  storage_service.py
src/streamlit/utils/: __init__.py  image_processing.py  visualization.py
src/utils/: mlflow_path.py  mlflow_utils.py
tests/: __init__.py  conftest.py
tests/etl/: test_download_dataset.py  test_index_images_and_labels.py  test_preprocess_split.py
tests/evaluation/: test_evaluation.py  test_metrics.py
tests/interpretability/: test_gradcam.py  test_shap_utils.py
tests/models/: test_models.py
tests/utils/: test_mlflow_utils.py
