[project]
name = "breast-cancer-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.4.1",
    "keras>=3.12.0",
    "loguru>=0.7.3",
    "matplotlib>=3.10.7",
    "mlflow>=3.6.0",
    "numpy>=2.3.4",
    "opencv-python>=4.11.0.86",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.12.0",
    "pydicom>=3.0.1",
    "python-dotenv>=1.2.1",
    "scikit-learn>=1.7.2",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "pylint>=4.0.2",
    "pytest>=9.0.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.4",
]
