[project]
name = "breast-cancer-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.4.1",
    "dvc>=3.64.0",
    "fastapi>=0.121.1",
    "joblib>=1.5.2",
    "keras>=3.12.0",
    "loguru>=0.7.3",
    "matplotlib>=3.10.7",
    "mlflow>=3.6.0",
    "numpy>=2.3.4",
    "opencv-python-headless>=4.11.0.86",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "psutil>=7.1.3",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.12.0",
    "pydicom>=3.0.1",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.20",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "streamlit>=1.51.0",
    "tensorflow>=2.20.0",
    "tqdm>=4.67.1",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "pylint>=4.0.2",
    "pytest>=9.0.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.4",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
